Performance regression with subdivision modifier and enabled scene statistics #94671

Closed
opened 2022-01-05 22:57:10 +01:00 by thin soldier · 20 comments

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.84

Blender Version
Broken: version: 3.1.0, caused by {eed45d2a239a2a18a2420ba15dfb55e0f8dc5630} or maybe {d25fa3250aae7e22f68579c053c591a8b2682e3c}
NOTE: For eed45d2a23 or later commits, I had to apply d25fa3250a to avoid deadlock

Short description of error
Enabled scene statistics along with objects with Subdivision Surface modifier makes viewport lagging, including at least node editor.
With CPU subdivision viewport lagging occur no matter if modifier enabled in viewport or not. With GPU subdivision issue occur only when modifier is disabled in viewport (perhaps another bug?).

Exact steps for others to reproduce the error

  • Open attached file
  • Enable scene statistics (RMB over the footer or via overlay)
  • Move around the Cube.
    Viewport has very visible lag.

NOTE: The problem occurs even if the modifier is disabled or if GPU Subdvision is enabled in the preferences.

viewport_statistics_lag.blend

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.84 **Blender Version** Broken: version: 3.1.0, caused by {eed45d2a239a2a18a2420ba15dfb55e0f8dc5630} or maybe {d25fa3250aae7e22f68579c053c591a8b2682e3c} NOTE: For eed45d2a23 or later commits, I had to apply d25fa3250a to avoid deadlock **Short description of error** Enabled scene statistics along with objects with `Subdivision Surface` modifier makes viewport lagging, including at least node editor. With CPU subdivision viewport lagging occur no matter if modifier enabled in viewport or not. With GPU subdivision issue occur only when modifier is disabled in viewport (perhaps another bug?). **Exact steps for others to reproduce the error** - Open attached file - Enable scene statistics (RMB over the footer or via overlay) - Move around the Cube. Viewport has very visible lag. NOTE: The problem occurs even if the modifier is disabled or if `GPU Subdvision` is enabled in the preferences. [viewport_statistics_lag.blend](https://archive.blender.org/developer/F12799111/viewport_statistics_lag.blend)
Author

Added subscriber: @thinsoldier

Added subscriber: @thinsoldier

#94608 was marked as duplicate of this issue

#94608 was marked as duplicate of this issue

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can't reproduce this issue here

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12
version: 3.1.0 Alpha, branch: master, commit date: 2022-01-03 07:10, hash: ea8d749587

#94671.blend

@thinsoldier Can you check if I followed your steps correctly? Also I can see some operation will result in small lag, but then everything is quite smooth.

I can't reproduce this issue here **System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 version: 3.1.0 Alpha, branch: master, commit date: 2022-01-03 07:10, hash: `ea8d749587` [#94671.blend](https://archive.blender.org/developer/F12790934/T94671.blend) @thinsoldier Can you check if I followed your steps correctly? Also I can see some operation will result in small lag, but then everything is quite smooth.
Author

Hi Richard. Your file is correct.

Opening your file took almost a minute. Selecting the cube took 4 seconds. Deselecting the cube took 3 seconds. Same with the monkey. Moving the cube is a chore.
Double clicking the cube in the outliner to rename it does not work. If I double click on the cube in the outliner and then move my mouse over the camera, after about 6 seconds the camera gets selected.

If I go to preferences to enable gpu subdivision option it takes about 8 seconds for the checkbox to become active. It then takes about 8 seconds to go back to the main blender window. After that, all problems are gone.

Opening the file in Blender 3.0 only takes 10 seconds and has no problems interacting with anything.

I am currently downloading the latest build e6ca0b33e9 to test your file again.

Update: I was certain I had used factory settings in my testing but I guess I was wrong. After using Load Factory Settings there doesn't seem to be any problems. I'll try to figure out which addon brings the problem back.

Update 2: I went back to my previous settings and then I disabled every addon one by one and check performance and nothing improved. Other observations: pan/zoom/orbit has no problems, entering edit mode on the cube is fast, leaving edit mode takes 3 seconds. Move/rotate/scale of cube components in edit mode is fast. While in edit mode on the cube, interacting with properties sliders or renaming items in the outliner is fast like normal.

Update 3: Load Factory Settings enables the GPU Subdivision option which explains why the problem went away in that case.

Hi Richard. Your file is correct. Opening your file took almost a minute. Selecting the cube took 4 seconds. Deselecting the cube took 3 seconds. Same with the monkey. Moving the cube is a chore. Double clicking the cube in the outliner to rename it does not work. If I double click on the cube in the outliner and then move my mouse over the camera, after about 6 seconds the camera gets selected. If I go to preferences to enable gpu subdivision option it takes about 8 seconds for the checkbox to become active. It then takes about 8 seconds to go back to the main blender window. After that, all problems are gone. Opening the file in Blender 3.0 only takes 10 seconds and has no problems interacting with anything. I am currently downloading the latest build e6ca0b33e920 to test your file again. Update: I was certain I had used factory settings in my testing but I guess I was wrong. After using Load Factory Settings there doesn't seem to be any problems. I'll try to figure out which addon brings the problem back. Update 2: I went back to my previous settings and then I disabled every addon one by one and check performance and nothing improved. Other observations: pan/zoom/orbit has no problems, entering edit mode on the cube is fast, leaving edit mode takes 3 seconds. Move/rotate/scale of cube components in edit mode is fast. While in edit mode on the cube, interacting with properties sliders or renaming items in the outliner is fast like normal. Update 3: Load Factory Settings enables the GPU Subdivision option which explains why the problem went away in that case.

Added subscriber: @qbicksan

Added subscriber: @qbicksan

Even with GPU Subdivision turned on it is still very laggy, check this video:

https://drive.google.com/file/d/1IASDCiYFiXiRTCHamgjjyeynx4n6qI-r/view?usp=drivesdk

with lots of subdivided items it is almost impossible to position objects, but with subdiv being applied - everything is snappy.
however, if I was about to position all polygons of given item instead of moving object - no lags at all.

Even with GPU Subdivision turned on it is still **very** laggy, check this video: https://drive.google.com/file/d/1IASDCiYFiXiRTCHamgjjyeynx4n6qI-r/view?usp=drivesdk with lots of subdivided items it is almost impossible to position objects, but with subdiv being applied - everything is snappy. however, if I was about to position all polygons of given item instead of moving object - no lags at all.

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

Checked this with fairly low performance notebook too and can't really see any significant difference between 3.0 and 3.1 versions.

Checked this with fairly low performance notebook too and can't really see any significant difference between 3.0 and 3.1 versions.

Added subscriber: @Vyach

Added subscriber: @Vyach
[2022-01-08_10-04-26.mp4](https://archive.blender.org/developer/F12794094/2022-01-08_10-04-26.mp4)

Added subscribers: @kevindietrich, @Garek

Added subscribers: @kevindietrich, @Garek

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm. Will raise priority as this is confirmed regression.

Problem lies within scene statistics (both overlay and at the footer). That wasn't obvious since with Load Factory Settings all was working but without it did not. I remembered that only thing I changed before in startup file is scene statistics.
I noticed lag with moving nodes but didn't test it as much as just moving Suzanne, assume it's same.
I tried to reproduce with other modifiers such as Remesh and Multiresolution but they seems to work fine.

  1. Blender 3.0 test
    1. Blender 3.0 2022-01-08 14-25-22.mp4
  2. Blender 3.1 CPU Subdivision
    2. Blender 3.1 CPU 2022-01-08 14-28-06.mp4
  3. Blender 3.1 GPU Subdivision. Notice that although while modifier is visible in viewport and working fine with statistics it still needs a lot of time to load upon checking scene statistics. And upon disabling modifier in viewport there is lag.
    3. Blender 3.1 GPU 2022-01-08 14-32-31.mp4
Can confirm. Will raise priority as this is confirmed regression. Problem lies within scene statistics (both overlay and at the footer). That wasn't obvious since with `Load Factory Settings` all was working but without it did not. I remembered that only thing I changed before in startup file is scene statistics. I noticed lag with moving nodes but didn't test it as much as just moving Suzanne, assume it's same. I tried to reproduce with other modifiers such as Remesh and Multiresolution but they seems to work fine. 1. Blender 3.0 test [1. Blender 3.0 2022-01-08 14-25-22.mp4](https://archive.blender.org/developer/F12795291/1._Blender_3.0_2022-01-08_14-25-22.mp4) 2. Blender 3.1 CPU Subdivision [2. Blender 3.1 CPU 2022-01-08 14-28-06.mp4](https://archive.blender.org/developer/F12795305/2._Blender_3.1_CPU_2022-01-08_14-28-06.mp4) 3. Blender 3.1 GPU Subdivision. Notice that although while modifier is visible in viewport and working fine with statistics it still needs a lot of time to load upon checking scene statistics. And upon disabling modifier in viewport there is lag. [3. Blender 3.1 GPU 2022-01-08 14-32-31.mp4](https://archive.blender.org/developer/F12795323/3._Blender_3.1_GPU_2022-01-08_14-32-31.mp4)
Garek changed title from performance regression when subdivision modifier is in use to Performance regression with subdivision modifier and enabled scene statistics 2022-01-08 11:25:12 +01:00

Added subscribers: @MarcinTwarowski, @mano-wii

Added subscribers: @MarcinTwarowski, @mano-wii

@kevindietrich, when you can, could you take a look at this problem?

@kevindietrich, when you can, could you take a look at this problem?

This issue was referenced by f134341e03

This issue was referenced by f134341e03b5fe3edd5112557bcf42f6667ba69d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-01-11 03:36:07 +01:00

tested. Thanks, all is fine now.

tested. Thanks, all is fine now.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94671
No description provided.